...

class TopView: UIView {
    
    @IBOutlet weak var verticalStackView: UIStackView!
    @IBOutlet weak var horizontalStackView: UIStackView!
    @IBOutlet weak var titleLabel: Label!
    @IBOutlet weak var leftNavigationButton: Button!
    @IBOutlet weak var rightNavigationButton: Button!
    
    /// Default height of 72
    @IBOutlet weak var stackViewHeight: NSLayoutConstraint?
    
    weak var delegate: TopViewDelegate?
    
...
