...
        topView.rightNavigationButton.tintColor = Theme.Colors.seaFoam
        rightNavigationAction = .custom({
            let isAlreadySet = self.tableView.tableHeaderView == self.addHailedRideView
            self.tableView.tableHeaderView = isAlreadySet ? nil : self.addHailedRideView
        })

        title = "Ride Queue"

        super.viewDidLoad()

        view.backgroundColor = Theme.Colors.backgroundGray
    
        dataSource.cellDelegate = self
...
                    MixpanelEvents.DRIVER_HAILED_RIDE_ADDED, properties: [
                        "isADA" : isADA,
                        "passengers" : passengers
                    ]
                )
                
                self.presentAlert("Ride Added", message: "This Ride has successfully been added to your queue.")
            case .failure(let error):
                self.presentAlert(for: error)
            }
        }
    }
}
...
