...
                topView.rightNavigationButton.isHidden = true
                title = ""
                return
            }
            
            topView.rightNavigationButton.isHidden = false
            title = currentUser.isAvailable ? "Queue is clear" : "You're unavailable"
        }
    }
    
    override func fetchDriverActions() {
        updateActions()
    }
...
    @objc private func delayedSound() {
        NotificationCoordinator.playSound(.CarHonk)
    }

    private func showNewActionAlert() {
        let alert = UIAlertController(title: "New Ride Added", message: "You have one new rider to pick up and the route was changed.", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Ok, I understand!", style: .cancel, handler: { _ in
        }))
        present(alert, animated: true, completion: {
            NotificationCoordinator.playSound(.RideChanged)
        })
    }

...
        )
    }
    
    func sendRideCancel(for resourceID: String, driverArrived: Bool) {
        var mpEvent = ""
        if driverArrived {
            let alert = UIAlertController(title: "Cancel Ride", message: "Are you sure you want to cancel this Ride while you are waiting to meet the Rider?", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "No", style: .cancel))
            alert.addAction(UIAlertAction(title: "Yes, unable to pick up", style: .destructive, handler: { _ in
                self.askForRiderReport(resourceID: resourceID)
                mpEvent = MixpanelEvents.DRIVER_RIDE_CANCELED
            }))
            alert.addAction(UIAlertAction(title: "Yes, rider no show", style: .destructive, handler: { _ in
                if let latitude = Defaults.userLatitude?.rounded(toPlaces: 8),
                   let longitude = Defaults.userLongitude?.rounded(toPlaces: 8) {
...
                } else {
                    self.presentAlert("Canceling ride failed", message: "Unable to determine your current location. Please ensure your location services are enabled and try again.")
                }
            }))
            present(alert, animated: true)
        } else {
            let confirm = UIAlertAction(title: "Yes, cancel ride", style: .destructive) { _ in
                self.askForRiderReport(resourceID: resourceID)
                mpEvent =  MixpanelEvents.DRIVER_RIDE_CANCELED_BEFORE_ARRIVAL
            }
            presentAlert("Cancel Ride", message: "Are you sure you want to cancel this Ride while you are on the way?", cancel: "No", confirm: confirm)
        }
        
...
        }
        let ride = Ride(context: self.context.dataStore.mainContext)
        ride.update(with: action)
        let vc = RatingViewController()
        vc.setRide(ride: ride, toReportOnly: true)
        self.emitRideCancel(rideId: resourceID)
        let alert = UIAlertController(title: "Rider Report", message: "Do you also want to report the rider?", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "No", style: .cancel))
        alert.addAction(UIAlertAction(title: "Yes, report rider", style: .destructive) { _ in
            self.navigationController?.pushViewController(vc, animated: true)
        })
        present(alert, animated: true)
    }
...
