...
  lastCheckOut: {
    type: Date
  },
  battery: {
    type: Number
  },
  mileage: {
    type: Number
  },
  pluggedIn: {
    type: Boolean
  },
  // Zone
...
