...
"ride_ride_confirmation" = "Ride Confirmation";
"ride_rating_reason" = "We're sorry you were unhappy with your ride.\nCan you please let us know the reason?";
"ride_rating_submitted" = "Rating Submitted!";
"ride_your_driver" = "Your driver";
"ride_select_pickup_stop" = "Select your pick up spot";
"ride_select_dropoff_stop" = "Select your drop off spot";
"ride_select_this_stop" = "Ok";
"ride_go_to_stop_short" = "Your driver will pick you up at the spot you selected.";
"ride_go_to_stop" = "Your driver will pick you up at the spot you selected. Please make sure you are there when your driver arrives.";
"ride_select_another_stop" = "Select another spot";
"ride_pickup_at" = "Pick up at";
"ride_dropoff_at" = "Drop off at";
"ride_driver_pickup" = "Your driver will pick you up here. Need a different pick up spot? Search for another location above or tap Move pin.";
...
"Ride Price" = "Contribution";
"Cancel Ride" = "Cancel Ride";
"Log In" = "Log In";
"Sign Up" = "Sign Up";
"and" = "and";
"You need to update Circuit app to the latest version in order to request rides" = "You need to update Circuit app to the latest version in order to request rides";
"Invalid Submission" = "Invalid Submission";
"Email address is not valid" = "Email address is not valid";
"Mobile phone number is not valid" = "Mobile phone number is not valid";
"Password must be at least 8 characters" = "Password must be at least 8 characters";
"Password must contain at least 1 uppercase letter" =  "Password must contain at least 1 uppercase letter";
"Password must contain at least 1 special character" = "Password must contain at least 1 special character";
"Password must contain at least 1 number" = "Password must contain at least 1 number";
...
