appId: com.thefreeride.driver.stage
---
- assertVisible: "Cancel"
- tapOn: "Cancel"
- assertVisible: "Cancel Ride"
- tapOn: "Yes, unable to pick up"
- assertVisible: "Rider Report"
- tapOn: "No"
